# yumcha

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  melos.yaml  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
android/app/: build.gradle.kts
apps/yumcha/: LICENSE  README.md  pubspec.yaml
doc/: MCP_INTEGRATION.md  provider_config_system.md
docs/: 20250616_重构计划.md  AI_SERVICE_ARCHITECTURE_IMPROVEMENT.md  Cherry_Studio_AI聊天状态管理分析.md  FUTURE_ARCHITECTURE.md  IMMEDIATE_REFACTOR_ACTIONS.md  PROJECT_OVERVIEW.md  PROJECT_STANDARDS.md  REFACTOR_CHECKLIST.md  REFACTOR_PLAN.md  app_drawer_optimization_report.md  chat_state_management_refactoring_plan.md  chat_system_refactoring_completion_report.md  chat_system_refactoring_plan.md  chat_system_refactoring_progress.md  chat_system_refactoring_summary.md  enhanced_to_block_migration_guide.md  provider.md  ui_best_practices_fixes.md  yumcha_AI聊天状态管理分析.md  yumcha_新架构使用指南.md  yumcha_状态管理无畏重构计划.md  yumcha_重构完成总结.md  yumcha_问题分析报告.md  重构完成总结.md  项目结构概览.md
examples/: simple_mcp_server.dart
integration_test/: simple_test.dart
lib/: exports.dart  main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: ai_chat.rs  mod.rs
rust_builder/: pubspec.yaml
test/: context_length_test.dart  mcp_integration_test.dart  run_tests.dart  stream_message_test.dart  thinking_process_test.dart  title_generation_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+564 files in other folders)
